--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -8,8 +8,15 @@
 	<true/>
 	<key>method</key>
 	<string>app-store-connect</string>
+	<key>provisioningProfiles</key>
+	<dict>
+		<key>com.example.flutterGithubactionsTestDemoAgain</key>
+		<string>GithubActionsDemoAppTestAgain</string>
+	</dict>
+	<key>signingCertificate</key>
+	<string>Apple Distribution</string>
 	<key>signingStyle</key>
-	<string>automatic</string>
+	<string>manual</string>
 	<key>stripSwiftSymbols</key>
 	<true/>
 	<key>teamID</key>
