--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
----
 name: Flutter CI CD
 on:
   push:
@@ -84,15 +83,13 @@ jobs:
           security set-keychain-settings -lut 21600
           security unlock-keychain -p "" ~/Library/Keychains/build.keychain
 
-#      - name: Build iOS App
-#        run: |
-#          xcodebuild -workspace ios/Runner.xcworkspace \
-#          -scheme Runner \
-#          -sdk iphoneos \
-#          -configuration Release \
-#          -allowProvisioningUpdates
-     
-     
+      - name: Install Provisioning Profile
+        env:
+          PROVISIONING_PROFILE_BASE64: ${{ secrets.PROVISIONING_PROFILE_BASE64 }}
+        run: |
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          echo "$PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/provisioning.mobileprovision
+
 
       - name: Build iOS app
         uses: cedvdb/action-flutter-build-ios@v1
@@ -101,7 +98,7 @@ jobs:
           build-cmd: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
           certificate-base64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
           certificate-password: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-#          provisioning-profile-base64: ${{ secrets.PROVISIONING_PROFILE_BASE64 }}
+          provisioning-profile-base64: ${{ secrets.PROVISIONING_PROFILE_BASE64 }}
           keychain-password: ${{ secrets.IOS_GITHUB_KEYCHAIN_PASSWORD }}
 
 
