--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -87,7 +87,7 @@ jobs:
         uses: cedvdb/action-flutter-build-ios@v1
         with:
           # always use --export-options-plist=ios/GithubActionsExportOptions.plist
-          build-cmd: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
+          build-cmd: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist --dart-define=GIT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
           certificate-base64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
           certificate-password: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
           provisioning-profile-base64: ${{ secrets.PROVISIONING_PROFILE_BASE64 }}
