--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -31,7 +31,10 @@ jobs:
       - name: Extract branch name
         run: echo "BRANCH_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
-      
+
+      - name: Print BRANCH_NAME
+        run: |
+          echo "Branch name is: $BRANCH_NAME"
 
       - name: Set Up Flutter
         uses: subosito/flutter-action@v2
@@ -89,7 +92,7 @@ jobs:
         uses: cedvdb/action-flutter-build-ios@v1
         with:
           # always use --export-options-plist=ios/GithubActionsExportOptions.plist
-          build-cmd: flutter build ipa --build-name=1.0.1+1 --build-number=19 --flavor $GITHUB_ENV --release --export-options-plist=ios/ExportOptions.plist --dart-define=GIT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+          build-cmd: flutter build ipa --build-name=1.0.1+1 --build-number=19 --flavor $BRANCH_NAME --release --export-options-plist=ios/ExportOptions.plist --dart-define=GIT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
           certificate-base64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
           certificate-password: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
           provisioning-profile-base64: ${{ secrets.PROVISIONING_PROFILE_BASE64 }}
