--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -109,10 +109,17 @@ jobs:
       - name: List generated IPA files
         run: ls -l build/ios/ipa/
 
+      - name: Find .ipa file
+        id: find_ipa
+        run: |
+          IPA_PATH=$(find build/ios/ipa/ -name "*.ipa" | head -n 1)
+          echo "Found IPA at: $IPA_PATH"
+          echo "ipa-path=$IPA_PATH" >> $GITHUB_OUTPUT
+
       - name: Deploy to App Store
         uses: apple-actions/upload-testflight-build@v1
         with:
-            app-path:  "build/ios/ipa/Apple.ipa"
+            app-path:  ${{ steps.find_ipa.outputs.ipa-path }}
             api-key-id: ${{ secrets.APP_STORE_CONNECT_KEY_ID }}
             api-private-key: ${{ secrets.APP_STORE_CONNECT_KEY }}
             issuer-id: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
