--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,7 +91,7 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
 flavorizr:
   flavors:
-    test:
+    testing:
       app:
         name: "Apple test"
 
