--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,9 +4,9 @@ platform :ios, '12.0' # Set your minimum iOS version
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'Runner', {
-  'Debug-test' => :debug,
-  'Profile-test' => :release,
-  'Release-test' => :release,
+  'Debug-testing' => :debug,
+  'Profile-testing' => :release,
+  'Release-testing' => :release,
   'Debug-staging' => :debug,
   'Profile-staging' => :release,
   'Release-staging' => :release,
